@@ -1,3 +1,8 @@
+2015-06-02  Jacob Fenton  <bocajnotnef@gmail.com>
+
+   * scripts/normalize-by-median.py: implemented broken_paired_reader
+   * tests/test_scripts.py: modified tests to properly use new args
+
 2015-06-01  Jacob Fenton  <bocajnotnef@gmail.com>
 
    * scripts/normalize-by-median.py: major refactoring to use context
